main/default/objects/Event_Monitoring__c/fields/Enabled_Types__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Types__c</fullName>
    <label>Enabled Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>