main/default/objects/Event_Monitoring__c/fields/Initialized__c.field-meta.xml
<CustomField>
    <fullName>Initialized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to detect first-time enablement.</description>
    <label>Initialized</label>
    <type>Checkbox</type>
</CustomField>