main/default/objects/Event_Monitoring__c/fields/Last_Processed_Hourly_Events__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Hourly_Events__c</fullName>
    <label>Last Processed Hourly Events</label>
    <type>DateTime</type>
</CustomField>